# maturin_test

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
