[package]
name = "maturin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_test"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
numpy = "0.24.0"
pyo3 = "0.24.0"
